refactor(测试计划): 优化生成报告逻辑